--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/svimtech-user/Downloads/nineoldandroids-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/svimtech-user/Downloads/Parse-1.5.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/svimtech-user/Downloads/picasso-2.3.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/svimtech-user/Downloads/ksoap2-android-assembly-3.3.0-jar-with-dependencies.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="/home/rahul/Parse-1.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/media/DATA/Rahul Docs/Android Libraries, jars and Samples/jars/ksoap2-android-assembly-3.3.0-jar-with-dependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="/media/DATA/Rahul Docs/Android Libraries, jars and Samples/jars/nineoldandroids-2.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/rahul/Downloads/picasso-2.3.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
