fixed the post status layout (Edit text problem), aligned the root fragment

--- a/project.properties
+++ b/project.properties
@@ -15,8 +15,8 @@
 target=android-20
 #proguard.config=proguard.cfg
 sdk.dir=/home/mako/Downloads/android-studio/sdk
-android.library.reference.1=../../workspace/project/android-support-v7-appcompat
-android.library.reference.2=../../workspace/project/google-play-services_lib
-android.library.reference.3=../../workspace/project/ParallaxScroll
-android.library.reference.4=../../workspace/project/library
-android.library.reference.5=../../workspace/project/main
+android.library.reference.1=../../Svimtechworkspace/android-support-v7-appcompat
+android.library.reference.2=../../Svimtechworkspace/library
+android.library.reference.3=../../Svimtechworkspace/google-play-services_lib
+android.library.reference.4=../../Svimtechworkspace/ParallaxScroll
+android.library.reference.5=../../Svimtechworkspace/main
